--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <!-- Template header inspired by: http://triton-env.com/-->
 
 <!-- Owner: Kate -->
+<!-- Sets the language, viewport size, links to the stylesheets and javascript page -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,7 +18,7 @@
 </head>
 
 <body>
-  <!-- Navbar --> <!-- navbar fixed to top of view when scrolling inspired by: https://www.limgeomatics.com/consulting/-->
+  <!-- Navbar for large and medium screens --> <!-- navbar fixed to top of view when scrolling inspired by: https://www.limgeomatics.com/consulting/-->
   <div class="top">
     <div class="bar card left-align large white">
       <!-- when the "burger" button is clicked a dropdown menu will appear. this button is only visible when the screen is smaller than a certain size -->
@@ -25,7 +26,6 @@
       <a href="index.html" class="bar-item button padding-large hover-white">Home</a>
       <a href="people.html" class="bar-item button hide-small padding-large hover-white">People</a>
       <a href="projects.html" class="bar-item button hide-small padding-large hover-white">Projects</a>
-
     </div>
     <!-- modified by Kazuto -->
     <!-- dropdown menu toggled by burger on small screens -->
@@ -40,7 +40,7 @@
   <!-- End of Owner: Kate -->
 
   <!-- Owner: Kate -->
-  <!-- Title image and accompanying text -->
+  <!-- Header title, image and accompanying text -->
   <header class="container center padding-62-16">
     <img class="image" src="images/Cloud9Consulting4.jpg" alt="Cloud 9 Consulting" width="1500" height="523">
     <!-- End of Owner: Kate -->
@@ -53,7 +53,7 @@
   <!-- End of Owner: Kazuto -->
 
   <!-- Owner: Kate -->
-  <!-- Content Grid -->
+  <!-- container with text -->
   <div class="container">
     <div class="content-large center">
       <div>
@@ -72,13 +72,14 @@
 
   <!-- Owner: Kate -->
   <!-- rollover project/service photo section inspired by: https://www.cerg.ca/ -->
+  <!-- creates a container with a title and line of text -->
   <div class="container light-grey center">
     <div class="content-large center">
       <div>
         <h2>How can we help?</h2>
         <p class="center">Our team of experts are here to help with all of your GIS needs.</p>
       </div>
-
+  <!-- image is linked to Geovisualization section on projects page, image changes when cursor goes over the image and changes back when cursor is outside of image -->
       <div>
         <div class="padding-large">
           <a href="projects.html#geovis">
@@ -86,7 +87,7 @@
           </a>
         </div>
       </div>
-      
+  <!-- image is linked to Surveying section on projects page, image changes when cursor goes over the image and changes back when cursor is outside of image -->
       <div>
         <div class="padding-large">
           <a href="projects.html#survey">
@@ -94,7 +95,7 @@
           </a>
         </div>
       </div>
-      
+  <!-- image is linked to Databases section on projects page, image changes when cursor goes over the image and changes back when cursor is outside of image -->    
       <div>
         <div class="padding-large">
           <a href="projects.html#database">
@@ -106,12 +107,12 @@
     </div>
   </div>
 
-  <!-- text at bottom stating company name -->
+  <!-- container with text at bottom stating company name -->
   <div class="container light-grey center">
     <p class="margin center">Cloud 9 Consulting</p>
   </div>
 
-  <!-- Footer -->
+  <!-- container with Footer -->
   <footer class="container center">  
     <div class="anchor"></div>
     <p class="center">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
