comments on projects

--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,5 @@
-<!-- Page created by Kazuto Nov 21-->
-<!-- edits made by Mark Nov 24, cleaning up unused classes-->
+<!-- Page created by Kazuto Nov 21 -->
+<!-- edits made by Mark Nov 24, cleaning up unused classes -->
 
 <!-- Owner: Kazuto -->
 <!DOCTYPE html>
@@ -16,7 +16,7 @@
 
 <!-- Owner: Kate -->
 <body>
-  <!-- Navbar --> <!-- navbar fixed to top of view when scrolling inspired by: https://www.limgeomatics.com/consulting/-->
+  <!-- Navbar --> <!-- navbar fixed to top of view when scrolling inspired by: https://www.limgeomatics.com/consulting/ -->
   <div class="top">
     <div class="bar card left-align large white">
       <!-- when the "burger" button is clicked a dropdown menu will appear. this button is only visible when the screen is smaller than a certain size -->
@@ -27,7 +27,7 @@
 
     </div>
 
-  <!-- modified by Kazuto-->
+  <!-- modified by Kazuto -->
   <!-- dropdown menu toggled by burger button on small screens -->
     <div class='left'>
       <div id="SmallNavBar" class="bar-block light-grey hide hide-large hide-medium large">
@@ -37,7 +37,7 @@
     </div>
     <!-- end of Kazuto edit-->
   </div>
-  <!--End of Owner: Kate -->
+  <!-- End of Owner: Kate -->
 
   <!-- Owner: Kazuto -->
   <!-- Title image and accompanying text -->
@@ -51,9 +51,9 @@
   <!-- End of Owner: Kazuto -->
 
   <!-- owner: Kazuto -->
-  <!--modified by Mark Dec 4, 2020-->
+  <!-- modified by Mark Dec 4, 2020 -->
   <!-- inspiration from http://tresreistech.com/gis-consulting-and-services/ -->
-  <!-- following code displays 6 icons that are anchor links to the corresponding project description. Displayed 3 across x 2 down for large screens -->
+  <!-- following code displays 6 icons in Services menu that are anchor links to the corresponding project description. Displayed 3 across x 2 down for large screens -->
   <div class='content-large center hide-small'>
     <h2>Services</h2>
     <div class='flex'>
@@ -92,11 +92,11 @@
       </a>
     </div>
   </div>
-  <!-- end Kazuto ownership-->
-  <!-- end menu large screen-->
+  <!-- end Kazuto ownership -->
+  <!-- end menu large screen -->
 
-  <!--Owner Mark December 5-->
-  <!-- menu on small screen-->
+  <!-- Owner Mark December 5 -->
+  <!-- Services menu on small screen -->
   <!-- Displayed 2 across x 3 down for small screens -->
   <div class='content-large center hide-large hide-medium'>
     <div class='flex hide-large hide-medium'>
@@ -141,13 +141,14 @@
       </a>
     </div>
   </div>
-  <!--end menu small screen-->
-  <!--end Mark-->
+  <!-- end menu small screen -->
+  <!-- end Mark -->
 
   <!-- beginning of project descriptions; 6 in total, each with a title and accompanying paragraph-->
 
   <!-- Owner: Kate -->
-  <!-- GEOM 103-->
+  <!-- creates container to contain title, paragraph, list and image -->
+  <!-- Spatial Analysis Section -->
   <div class="light-grey container" id='spatial'>
     <div class="content-large">
       <div class="padding-bottom">
@@ -172,7 +173,9 @@
   </div>
   <!-- end of Owner: Kate -->
 
-  <!--Owner Mark-->
+  <!-- Owner Mark -->
+  <!-- creates container to contain title, paragraph, list and image -->
+  <!-- Geovisualization Section -->
   <div class="container" id='geovis'>
     <div class="content-large">
       <div class="padding-bottom">
@@ -202,6 +205,8 @@
   <!-- End of Owner: Kate-->
 
   <!-- Owner: Mark -->
+  <!-- creates container to contain title, paragraph, list and image -->
+  <!-- Database Modeling -->
   <div class="light-grey container" id='database'>
     <div class="content-large">
       <div class="padding-bottom">
@@ -228,6 +233,8 @@
   <!-- End of Owner: Kate -->
 
   <!-- Owner: Kazuto -->
+  <!-- creates container to contain title, paragraph, list and image -->
+  <!-- Remote Sensing Section -->
   <div class="container" id='remote'>
     <div class="content-large">
       <div class="padding-bottom">
@@ -255,6 +262,8 @@
   <!-- End of Owner: Kate -->
 
   <!-- Owner: Kazuto -->
+  <!-- creates container to contain title, paragraph, list and image -->
+  <!-- Surveying Section -->
   <div class="light-grey container" id='survey'>
     <div class="content-large">
       <div class="padding-bottom">
@@ -283,6 +292,8 @@
   <!-- End of Owner: Kate -->
 
   <!-- Owner: Kazuto -->
+  <!-- creates container to contain title, paragraph, list -->
+  <!-- Web Design Section -->
   <div class="container" id='webdesign'>
     <div class="content-large">
       <div class="padding-bottom">
@@ -309,7 +320,7 @@
       <p class="margin center">Cloud 9 Consulting</p>
   </div>
 
-  <!-- Footer -->
+  <!-- Container with footer -->
   <footer class="container center">  
     <div class="anchor"></div>
     <p class="center">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
